adding support for minimum periods per player
